fix whitespace at bottom of concert music page

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -53,6 +53,11 @@ main {
     }
 }
 
+ul {
+    margin-bottom: 0;
+    padding-bottom: 1rem;
+}
+
 //------
 // NAV
 //------
